Remove open api
