# src/controllers/api/v1/panel/users.controller.ts
@@ -6,11 +6,11 @@ import { PanelUserCreateCase } from '../../../../usecases/panel/user/create.case
 import { PanelUserListCase } from '../../../../usecases/panel/user/list.case';
 import { buildPagination } from '../../../../utils/pagination';
 import { validate } from '../../../../utils/request.validator';
-import { queries, schemas } from '../../../../utils/schemas';
+import { schemas } from '../../../../utils/schemas';
 
 const index = async (ctx: Koa.Context) => {
-  const attrs = validate<operations['get-panel-users']['parameters']['query']>({
-    schema: queries['get-panel-users'],
+  const attrs = validate<operations['getPanelUsers']['parameters']['query']>({
+    schema: schemas.query.getPanelUsers,
     data: ctx.request.query,
   });
 
@@ -29,7 +29,7 @@ const index = async (ctx: Koa.Context) => {
 
 const create = async (ctx: Koa.Context) => {
   const attrs = validate<components['schemas']['MrPanelUserCreateRequest']>({
-    schema: schemas.MrPanelUserCreateRequest,
+    schema: schemas.component.MrPanelUserCreateRequest,
     data: ctx.request.body,
   });
 
